# cmr_lidarloop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
action/: LiDAR_Registration.action
cfg/: cmr_lidarloop_params.yaml  cmr_lidarloop_params_kitti.yaml  rosconsole.config
detector/test/: raw_test_data.csv  test_the_detector.py
detector/training/: LiDAR_Loopdetector.pickle  LiDAR_Loopdetector_python3.pickle  functions_for_detector.py  raw_training_data.csv  train_the_detector.py
include/cmr_lidarloop/: lidar_loopdetection.h  lidar_registration.h
launch/: cmr_lidarloop.launch  kitti.launch  kitti_odom.launch  save_detector_data.launch
scripts/: lidar_loopdetector_server.py  run_eval.sh  run_rtabmap_kitti.sh
src/: lidar_loopdetection.cpp  lidar_registration_server.cpp  save_data_for_detector.cpp
src/Registration_Test/: CMakeLists.txt  registration_test.cpp
srv/: LiDAR_Loopdetector.srv
